--- a/baraj24.xcodeproj/xcshareddata/xcschemes/OneSignalNotificationServiceExtension.xcscheme
+++ b/baraj24.xcodeproj/xcshareddata/xcschemes/OneSignalNotificationServiceExtension.xcscheme
@@ -30,7 +30,7 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "1DE8ED792CF5F57100964AFE"
+               BlueprintIdentifier = "1D389D372CF71938000C54BE"
                BuildableName = "OneSignalNotificationServiceExtension.appex"
                BlueprintName = "OneSignalNotificationServiceExtension"
                ReferencedContainer = "container:baraj24.xcodeproj">
@@ -44,6 +44,30 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
+      <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "1D6F41D42A81108900055D87"
+               BuildableName = "baraj24Tests.xctest"
+               BlueprintName = "baraj24Tests"
+               ReferencedContainer = "container:baraj24.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "1D6F41DE2A81108900055D87"
+               BuildableName = "baraj24UITests.xctest"
+               BlueprintName = "baraj24UITests"
+               ReferencedContainer = "container:baraj24.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
