--- a/baraj24.xcodeproj/xcshareddata/xcschemes/baraj24.xcscheme
+++ b/baraj24.xcodeproj/xcshareddata/xcschemes/baraj24.xcscheme
@@ -29,6 +29,30 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
+      <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "1D6F41D42A81108900055D87"
+               BuildableName = "baraj24Tests.xctest"
+               BlueprintName = "baraj24Tests"
+               ReferencedContainer = "container:baraj24.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "1D6F41DE2A81108900055D87"
+               BuildableName = "baraj24UITests.xctest"
+               BlueprintName = "baraj24UITests"
+               ReferencedContainer = "container:baraj24.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
